--- a/pages/browse.html
+++ b/pages/browse.html
@@ -12,25 +12,17 @@
   </head>
   <body>
     <div class="top-bar">
-          <div class="top-bar-left">
-            <ul class="dropdown menu" data-dropdown-menu>
-              <li class="menu-text">Site Title</li>
-              <li>
-                <a href="#">One</a>
-                <ul class="menu vertical">
-                  <li><a href="#">One</a></li>
-                  <li><a href="#">Two</a></li>
-                  <li><a href="#">Three</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
-            </ul>
-          </div>
-        </div>
-    <div class="off-canvas-wrapper">
-      <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
-        
+      <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li class="menu-text">sous-chef</li>
+          <li><a href="./browse.html">home</a></li>
+          <li><a href="./collections.html">collections</a></li>
+          <li><a href="./addrecipe.html">add recipe</a></li>
+        </ul>
+      </div>
+    </div>
+      <div class="off-canvas-wrapper">
+        <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
           <div class="row small-up-2 medium-up-3 large-up-4">
             <div class="column">
               <img class="thumbnail" src="https://placehold.it/550x550" />
@@ -81,7 +73,6 @@
               <h5>My Site</h5>
             </div>
           </div>
-   
         </div>
       </div>
     </div>
