--- a/pages/collections.html
+++ b/pages/collections.html
@@ -14,17 +14,10 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Site Title</li>
-          <li>
-            <a href="#">One</a>
-            <ul class="menu vertical">
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
+          <li class="menu-text">sous-chef</li>
+          <li><a href="./browse.html">home</a></li>
+          <li><a href="./collections.html">collections</a></li>
+          <li><a href="./addrecipe.html">add recipe</a></li>
         </ul>
       </div>
     </div>
