add recipes 'card'

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css"
-    />
+      />
     <link rel="stylesheet" href="./../css/app.css" />
   </head>
   <body>
@@ -25,53 +25,136 @@
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
         <div class="row small-up-2 medium-up-3 large-up-4">
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
           <div class="column">
-            <img class="thumbnail" src="https://placehold.it/550x550" />
-            <h5>My Site</h5>
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
           </div>
+          <div class="column">
+            <div class="card">
+              <img src="https://placehold.it/550x550" />
+              <div class="card-section">
+                <h4>Recipe</h4>
+                <p>It has an easy to override visual style, and is appropriately
+                  subdued.</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
