collections and home page

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -14,7 +14,7 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <a class="sous-chef-logo" href="./browse.html">
-          <svg x="0px" y="0px" 
+          <svg x="0px" y="0px"
             viewBox="0 0 400 100">
 
             <polygon class="book" points="9.571,7.594 66.063,7.594 68.838,10.369
@@ -26,7 +26,7 @@
                   d="M57.739,72.811L17.214,30.121c0,0-4.243,9.388,15.305,30.994c3.214-2.702,3.214-2.702,3.214-2.702
                   l3.215,2.958c0,0,5.271,8.615,11.574,11.059c-0.129,2.187-0.386,3.473-0.386,3.473l2.315,1.801L57.739,72.811z"
                   />
-                  <path class="no-fil"
+                  <path class="no-fill"
                     d="M55.706,54.622l10.16-10.159l-1.97-1.713l-7.201,7.201l-1.533-1.623l7.202-7.201l-1.553-1.619l-7.201,7.202
                     l-1.673-1.516l7.201-7.202l-1.794-1.656L47.055,46.367l0.638,4.871L37.148,61.783h-1.287L22.873,74.771l4.437,4.437l12.925-12.925
                     v-1.67c0,0,3.729-3.73,10.417-10.418C52.064,55.096,55.706,54.622,55.706,54.622z"
