Added a placeholder for one recipe

--- a/pages/browse.html
+++ b/pages/browse.html
@@ -49,12 +49,10 @@
                 <div class="row small-up-2 medium-up-3 large-up-4">
                   <div class="column">
                     <div class="card">
-                      <img src="https://placehold.it/550x550" />
+                      <img src="../img/NY-CC-Large.jpg" />
                       <div class="card-section">
-                        <h4>Recipe</h4>
-                        <p>It has an easy to override visual style, and is
-                          appropriately
-                          subdued.</p>
+                        <h4><a href="./recipe.html">New York Cheesecake</a></h4>
+                        <p>The perfect recipe for a creamy, crack-free New York-style cheesecake</p>
                       </div>
                     </div>
                   </div>
