--- a/pages/addrecipe.html
+++ b/pages/addrecipe.html
@@ -95,7 +95,7 @@
                       />
                   </div>
                 </div>
-                <a href="#" class="button large expanded">Buy Now</a>
+                <a href="#" class="">Buy Now</a>
                 <div class="small secondary expanded button-group">
                   <a class="button">Facebook</a> <a class="button">Twitter</a>
                   <a class="button">Instagram</a>
