--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -50,13 +50,13 @@
             <br />
             <div class="row">
               <div class="medium-6 columns">
-                <img class="thumbnail" src="https://placehold.it/650x350" />
+                <img class="thumbnail" src="../img/NY-CC-Large.jpg" />
                 <div class="row small-up-4">
                   <div class="column">
-                    <img class="thumbnail" src="https://placehold.it/250x200" />
+                    <img class="thumbnail" src="../img/NY-CC-Small1.jpg" />
                   </div>
                   <div class="column">
-                    <img class="thumbnail" src="https://placehold.it/250x200" />
+                    <img class="thumbnail" src="../img/NY-CC-Small2.jpg" />
                   </div>
                   <div class="column">
                     <img class="thumbnail" src="https://placehold.it/250x200" />
@@ -67,24 +67,35 @@
                 </div>
               </div>
               <div class="medium-6 large-5 columns">
-                <h3>My Awesome Product</h3>
+                <h3>New York Cheesecake</h3>
                 <p>
-                  Nunc eu ullamcorper orci. Quisque eget odio ac lectus
-                  vestibulum
-                  faucibus eget in metus. In pellentesque faucibus vestibulum.
-                  Nulla at
-                  nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet
-                  egestas
-                  purus in.
+                    INGREDIENTS<br/><br/>
+                    FOR THE CRUST<br/>
+                    1-1/2 cups graham cracker crumbs, from 12 whole crackers<br/>
+                    5 tablespoons unsalted butter, melted<br/>
+                    2 tablespoons sugar<br/>
+                    1/8 teaspoon salt<br/>
+                    FOR THE FILLING<br/><br/>
+                    32 oz (four 8-oz blocks) cream cheese, at room temperature<br/>
+                    2 cups sugar<br/>
+                    3 tablespoons all-purpose flour<br/>
+                    4 teaspoons vanilla extract<br/>
+                    1 teaspoon packed lemon zest, from 1 lemon<br/>
+                    2 teaspoons fresh lemon juice, from 1 lemon<br/>
+                    1/4 teaspoon salt<br/>
+                    6 large eggs<br/>
+                    1/2 cup sour cream<br/>
+                    Special equipment: 9- or 10-inch springform pan; 18-inch heavy-duty aluminum foil<br/>
+                    Berry sauce, for serving (optional)<br/>
                 </p>
-                <label>Size
+                <!-- <label>Size
                   <select>
                     <option value="husker">Small</option>
                     <option value="starbuck">Medium</option>
                     <option value="hotdog">Large</option>
                     <option value="apollo">Yeti</option>
                   </select>
-                </label>
+                </label> -->
                 <div class="row">
                   <div class="small-3 columns">
                     <label for="middle-label" class="middle">Quantity</label>
@@ -97,7 +108,7 @@
                       />
                   </div>
                 </div>
-                <a href="#" class="button large expanded">Buy Now</a>
+                <a href="#" class="button large expanded">Edit Recipe</a>
                 <div class="small secondary expanded button-group">
                   <a class="button">Facebook</a> <a class="button">Twitter</a>
                   <a class="button">Yo</a>
