--- a/pages/addrecipe.html
+++ b/pages/addrecipe.html
@@ -46,61 +46,52 @@
 
             <br />
 
-            <div class="row">
-              <div class="medium-6 columns">
-                <img class="thumbnail" src="https://placehold.it/650x350" />
-                <div class="row small-up-4">
-                  <div class="column">
-                    <img class="thumbnail" src="https://placehold.it/250x200" />
+            <div class="row.addrecipe">
+              <div class="medium-10 large-5 columns">
+                <h2>Create a new recipe</h2>
+                <br>
+                <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+
+                <form>
+                  <div class="row">
+                    <div class="medium-6 columns">
+                      <div class="form-icons">
+                        <div class="input-group">
+                          <input class="input-group-field" type="text" placeholder="Name">
+                        </div>
+
+                        <div class="input-group">
+                          <input class="input-group-field" type="text" placeholder="Discription">
+                        </div>
+                        <div class="imput-group">
+                          <textarea placeholder="Enter the recipe here!"></textarea>
+                        </div>
+
+
+                      </div>
+                    </div>
+                    <div class="medium-6 columns">
+                      <img src="https://placehold.it/550x550" />
+                      <input type="file" name="pic" accept="image/*">
+                      <div class="input-group">
+                        <select>
+                          <option value="Nothing">Select Collection</option>
+                          <option value="Favorites">Favorites</option>
+                          <option value="Christmas">Christmas</option>
+                        </select>
+                      </div>
+                    </div>
                   </div>
-                  <div class="column">
-                    <img class="thumbnail" src="https://placehold.it/250x200" />
-                  </div>
-                  <div class="column">
-                    <img class="thumbnail" src="https://placehold.it/250x200" />
-                  </div>
-                  <div class="column">
-                    <img class="thumbnail" src="https://placehold.it/250x200" />
-                  </div>
-                </div>
-              </div>
-              <div class="medium-6 large-5 columns">
-                <h3>My Awesome Product</h3>
-                <p>
-                  Nunc eu ullamcorper orci. Quisque eget odio ac lectus
-                  vestibulum
-                  faucibus eget in metus. In pellentesque faucibus vestibulum.
-                  Nulla at
-                  nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet
-                  egestas
-                  purus in.
-                </p>
-                <label>Size
-                  <select>
-                    <option value="husker">Small</option>
-                    <option value="starbuck">Medium</option>
-                    <option value="hotdog">Large</option>
-                    <option value="apollo">Yeti</option>
-                  </select>
-                </label>
-                <div class="row">
-                  <div class="small-3 columns">
-                    <label for="middle-label" class="middle">Quantity</label>
-                  </div>
-                  <div class="small-9 columns">
-                    <input
-                      type="text"
-                      id="middle-label"
-                      placeholder="One fish two fish"
-                      />
-                  </div>
-                </div>
-                <a href="#" class="">Buy Now</a>
+
+                  <button class="button">Create Recipe!</button>
+                </form>
+
                 <div class="small secondary expanded button-group">
                   <a class="button">Facebook</a> <a class="button">Twitter</a>
                   <a class="button">Instagram</a>
                 </div>
               </div>
+
             </div>
             <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
             <script
