added extra box

--- a/pages/addrecipe.html
+++ b/pages/addrecipe.html
@@ -46,7 +46,7 @@
 
             <br />
 
-            <div class="row.addrecipe">
+            <div class="row">
               <div class="medium-10 large-5 columns">
                 <h2>Create a new recipe</h2>
                 <br>
@@ -64,7 +64,8 @@
                           <input class="input-group-field" type="text" placeholder="Discription">
                         </div>
                         <div class="imput-group">
-                          <textarea placeholder="Enter the recipe here!"></textarea>
+                          <textarea placeholder="Enter ingredients here"></textarea>
+                          <textarea placeholder="Enter instruction steps here"></textarea>
                         </div>
 
 
