add search html

--- a/pages/editrecipe.html
+++ b/pages/editrecipe.html
@@ -39,7 +39,7 @@
                 <ul class="dropdown menu" data-dropdown-menu>
                   <li><a href="./browse.html">home</a></li>
                   <li><a href="./collections.html">collections</a></li>
-                  <li><a class="active" href="./addrecipe.html">add recipe</a></li>
+                  <li><a href="./addrecipe.html">add recipe</a></li>
                 </ul>
               </div>
             </div>
