added edit recipe

--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -92,12 +92,17 @@
                   cheesecake.</div>
                 <div class="recipe-content">
                   <p>
-                    <b>INGREDIENTS</b><br/><br/>
-                        FOR THE CRUST<br/>
+                    <b>INGREDIENTS</b>
+                    <br/><br/>
+                        FOR THE CRUST
+                        <br/>
                           1-1/2 cups graham cracker crumbs, from 12 whole
-                          crackers<br/>
-                            5 tablespoons unsalted butter, melted<br/>
-                              2 tablespoons sugar<br/>
+                          crackers
+                          <br/>
+                            5 tablespoons unsalted butter, melted
+                            <br/>
+                              2 tablespoons sugar
+                              <br/>
                                 1/8 teaspoon salt<br/>
 
                                   <hr/>
@@ -117,6 +122,14 @@
                                                           Berry sauce, for
                                                           serving (optional)<br/>
                                                             <hr/>
+                                                            <b>INSTRUCTIONS</b>
+                                                            <br/><br/>
+                                                                FOR THE CRUST
+                                                                <br/>
+                                                                  Preheat oven to 300 degrees.
+                                                                  <br/>
+                                                                    Melt butter and cream together with cream cheese and sugar.
+                                                                        <hr/>
                                                               <b>NOTES</b><br/><br/>
                                                                   Special
                                                                   equipment: 9-
@@ -128,7 +141,7 @@
                                                                   </p>
                                                                 </div>
 
-                                                                <a href="#"
+                                                                <a href="/pages/editrecipe.html"
                                                                   class="button
                                                                   large
                                                                   expanded">Edit
