--- a/pages/editrecipe.html
+++ b/pages/editrecipe.html
@@ -3,14 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sous-chef | add recipe</title>
+    <title>sous-chef | edit recipe</title>
     <link
       rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css"
       />
     <link rel="stylesheet" href="./../css/app.css" />
   </head>
-  <body>
+  <script>
+      function success() {
+          window.alert("Saved!");
+      }
+      function fillForm(){
+          document.getElementById('title_in').value = "New York Style Cheesecake";
+          document.getElementById('description_in').value = "The perfect recipe for a creamy, crack-free New York-style cheesecake.";
+          document.getElementById('ingredients_in').value = "1-1/2 cups graham cracker crumbs, from 12 whole crackers; 5 tablespoons unsalted butter, melted; 2 tablespoons sugar; 1/8 teaspoon salt";
+          document.getElementById('instructions_in').value ="Preheat oven to 300 degrees; Melt butter and cream together with cream cheese and sugar.";
+          document.getElementById('notes_in').value = "Special equipment: 9- or 10-inch springform pan; 18-inch heavy-duty aluminum foils";
+      }
+  </script>
+  <body onload="fillForm()">
     <div class="top-bar">
       <div class="top-bar-left">
         <a class="sous-chef-logo" href="./browse.html">
@@ -45,59 +57,10 @@
             </div>
 
             <br />
-            <div style="display: none;">
-              <div class="row">
-                <div class="medium-6 columns">
-                  <img id="pic_1" class="thumbnail" src="https://placehold.it/550x550" style="width: 550px; height:550px;"/>
-                  <div class="row small-up-4">
-                    <div class="column">
-                      <img id="pic_2" class="thumbnail" src="https://placehold.it/250x200" style="width: 120px; height: 98px;"/>
-                    </div>
-                    <div class="column">
-                      <img id="pic_3" class="thumbnail" src="https://placehold.it/250x200"  style="width: 120px; height: 98px;"/>
-                    </div>
-                    <div class="column">
-                      <img id="pic_4" class="thumbnail" src="https://placehold.it/250x200" style="width: 120px; height: 98px;"/>
-                    </div>
-                    <div class="column">
-                      <img id="pic_5" class="thumbnail" src="https://placehold.it/250x200" style="width: 120px; height: 98px;"/>
-                    </div>
-                  </div>
-                </div>
-                <div class="medium-6 large-5 columns">
-
-                  <h3 id="title"></h3>
-                  <p id="discription"></p>
-                  <p id="ingredients"></p>
-                  <p id="instructions"></p>
-
-
-                  <div class="row">
-                    <div class="small-3 columns">
-                      <label for="middle-label" class="middle">Quantity</label>
-                    </div>
-                    <div class="small-9 columns">
-                      <input
-                        type="text"
-                        id="middle-label"
-                        placeholder="One fish two fish"
-                        />
-                    </div>
-                  </div>
-
-                  <a href="#" class="button large expanded">Edit Recipe</a>
-                  <div class="small secondary expanded button-group">
-                    <a class="button">Facebook</a> <a class="button">Twitter</a>
-                    <a class="button">Yo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
             <div>
               <div class="row">
                 <div class="medium-6 columns" style="margin-left:2em;">
-                  <h1>Create a New Recipe</h1>
+                  <h2>Edit Recipe</h2>
                   <br>
                   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
@@ -111,7 +74,7 @@
                           </div>
 
                           <div  class="input-group">
-                            <input id="discription_in"class="input-group-field" type="text" onchange="discription_update(event)" placeholder="Discription*">
+                            <input id="description_in"class="input-group-field" type="text" onchange="discription_update(event)" placeholder="Discription*">
                           </div>
 
                           <div  class="input-group" >
@@ -123,14 +86,14 @@
                           </div>
 
                           <div  class="input-group">
-                              <textarea id="instructions_in" class="input-group-field" placeholder="Enter Additional Notes (optional)" onchange="instruction_update(event)"></textarea>
+                              <textarea id="notes_in" class="input-group-field" placeholder="Enter Additional Notes (optional)" onchange="instruction_update(event)"></textarea>
                           </div>
 
                         </div>
                       </div>
                     </div>
 
-                    <button type="button" onclick="contentswap(event)" class="button expanded">Create Recipe</button>
+                    <button type="button" onclick="success()" class="button expanded">Save Recipe</button>
                   </form>
 
                 </div>
