--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -141,11 +141,12 @@
                                                                   </p>
                                                                 </div>
 
-                                                                <a href="/pages/editrecipe.html"
+                                                                <a href="./editrecipe.html"
                                                                   class="button
                                                                   large
                                                                   expanded">Edit
                                                                   Recipe</a>
+                                                              </a>
                                                                 <h4>Add to
                                                                   Collection</h4>
                                                                 <div required
