--- a/pages/collections-d.html
+++ b/pages/collections-d.html
@@ -55,7 +55,7 @@
                                 </a>
 
                                 <ul class="dropdown menu" data-dropdown-menu>
-                                    <li><a class="active" href="./browse.html">home</a></li>
+                                    <li><a href="./browse.html">home</a></li>
                                     <li><a href="./collections.html">collections</a></li>
                                     <li><a href="./addrecipe.html">add recipe</a></li>
                                 </ul>
